# trade_hub

./: pyproject.toml
core/: admin.py  models.py  serializers.py
core/migrations/: 0001_initial.py
tradehub/: settings.py  urls.py
